--- a/fc/menu-categories.html
+++ b/fc/menu-categories.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,8 +28,8 @@
 			    	<a href="index.html">
 			    		<h1>FC ANONYMOUS</h1>
 			    	</a>
-			    	<p>	<img src="images/fourstar.png" alt="logo">
-			    		<span>We Are Anonymous </span>
+			    	<p>	<img src="images/fourstar.png" alt="We Are Anonymous">
+			    		<span>We Are Anonymous</span>
 			    	</p>
 			    </div>
 
@@ -43,12 +42,12 @@
 	</div>
 	       <div id="collapsable-nav" class="collapse-navbar-collapse">
 	       	<ul id="nav-list" class="nav navbar-nav navbar-right">
-	       		<li class="visible-xs active">
+	       		<li class="visible-xs">
 	       			<a href="index.html">
 	       				<span class="glyphicon glyphicon-home">Home</span>
 	       			</a>
 	       		</li>
-	       		<li>
+	       		<li class="active">
 	       			<a href="menu-categories.html">
 	       				<span class="glyphicon glyphicon-th-large"></span><br class="hidden-xs">Menu
 	       				</a>
@@ -67,7 +66,7 @@
 	       			<a href="">
 	       				<span>+880***</span>
 	       			</a>
-	       			<div> * updating soon </div>
+	       			<div>* updating soon </div>
 	       		</li>
 	       	</ul><!-- #nav-list  -->
 		
@@ -86,34 +85,47 @@
 	<div id="xs-deliver" class="text-center visible-xs">* updating soon </div>
 
 	<div id="main-content" class="container">
-		<div class="jumbotron">
-			<img src="images/jumbotron.jpg" alt="Pic of us" class="img-responsive visible-xs">
-		</div>
-		<!-- /////// -->
+		<h2 id="menu-categories-title" class="text-center">Menu Categories</h2>
+		<div class="text-center">Tap on Any item you want to explore.</div>
 
-
-		<div id="home-tiles" class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="menu-categories.html">
-					<div id="menu-tile"><span>menu</span></div>
+		<section class="row">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+				<a href="players.html">
+					<div class="category-tile">
+						<img src="images/profiles.png" height="200" width="200" alt="profile">
+						<span>Player Profile</span>
+					</div>
 				</a>
 			</div>
-
-			<div class="col-md-4 col-sm-6 col-xs-12">
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+				<a href="formation.html">
+					<div class="category-tile">
+						<img src="images/form.jpg" height="200" width="200" alt="Lunch">
+						<span>Formations</span>
+					</div>
+				</a>
+			</div>
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
 				<a href="single-category.html">
-					<div id="specials-tile"><span>GALLERY</span></div>
-				</a>
-			</div>	
-
-			<div class="col-md-4 col-sm-12 col-xs-12">
-				<a href="https://goo.gl/maps/qB8Q8ArFcee4AEKU6" target="_blank">
-					<div id="map-tile"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233713.5366334781!2d90.34584452483024!3d23.75543695508446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2z4Kai4Ka-4KaV4Ka-!5e0!3m2!1sbn!2sbd!4v1637127782658!5m2!1sbn!2sbd" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe><span>map</span></div>
+					<div class="category-tile">
+						<img src="images/gallery.jpg" height="200" width="200" alt="Lunch">
+						<span>GALLERY</span>
+					</div>
 				</a>
 			</div>
+			
+			
+			<div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+				<a href="others.html">
+					<div class="category-tile">
+						<img src="images/others.png" height="200" width="200" alt="Others">
+						<span>Others</span>
+					</div>
+				</a>
+			</div>
+			
+		</section>
 
-		</div><!-- End of #home-tiles  -->
-
-		<!-- /////// -->
 
 	</div><!-- End of #main-content -->
 
@@ -154,6 +166,7 @@
 
      	</div>
      </footer>
+    	
 
 
      <!-- jQuery -->
@@ -162,6 +175,73 @@
 	<script src="js/script.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
