--- a/fc/single-category.html
+++ b/fc/single-category.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,8 +28,8 @@
 			    	<a href="index.html">
 			    		<h1>FC ANONYMOUS</h1>
 			    	</a>
-			    	<p>	<img src="images/fourstar.png" alt="logo">
-			    		<span>We Are Anonymous </span>
+			    	<p>	<img src="images/fourstar.png" alt="We Are Anonymous">
+			    		<span>We Are Anonymous</span>
 			    	</p>
 			    </div>
 
@@ -43,12 +42,12 @@
 	</div>
 	       <div id="collapsable-nav" class="collapse-navbar-collapse">
 	       	<ul id="nav-list" class="nav navbar-nav navbar-right">
-	       		<li class="visible-xs active">
+	       		<li class="visible-xs">
 	       			<a href="index.html">
 	       				<span class="glyphicon glyphicon-home">Home</span>
 	       			</a>
 	       		</li>
-	       		<li>
+	       		<li class="active">
 	       			<a href="menu-categories.html">
 	       				<span class="glyphicon glyphicon-th-large"></span><br class="hidden-xs">Menu
 	       				</a>
@@ -67,7 +66,7 @@
 	       			<a href="">
 	       				<span>+880***</span>
 	       			</a>
-	       			<div> * updating soon </div>
+	       			<div>* updating soon.</div>
 	       		</li>
 	       	</ul><!-- #nav-list  -->
 		
@@ -86,34 +85,89 @@
 	<div id="xs-deliver" class="text-center visible-xs">* updating soon </div>
 
 	<div id="main-content" class="container">
-		<div class="jumbotron">
-			<img src="images/jumbotron.jpg" alt="Pic of us" class="img-responsive visible-xs">
-		</div>
-		<!-- /////// -->
+		<h2 id="menu-categories-title"
+		class="text-center">GALLERY</h2>
+		<div class="text-center">"Here lives our memories."</div>
+
+         <section class="row">
+         	<div class="menu-item-tile col-md-6">
+         		<div class="row">
+         			<div class="col-sm-5">
+         				<div class="menu-item-photo">
+         					<div>G01</div>
+         					<img src="images/best.jpg" class="img-responsive" height="150" width="250" alt="Item">
+         				</div>
+         				<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+         			</div>
+         			<div class="menu-item-description col-sm-7">
+         				<h3 class="menu-item-title">Veag with Mixed Vegetables.</h3>
+         				<p class="menu-item-details">I have describe the food here.</p>
+         			</div>
+         		</div>
+         		<hr class="visible-xs">
+         	</div>
 
 
-		<div id="home-tiles" class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="menu-categories.html">
-					<div id="menu-tile"><span>menu</span></div>
-				</a>
-			</div>
+         	<div class="menu-item-tile col-md-6">
+         		<div class="row">
+         			<div class="col-sm-5">
+         				<div class="menu-item-photo">
+         					<div>G02</div>
+         					<img src="images/circle.jpg" class="img-responsive" height="150" width="250" alt="Item">
+         				</div>
+         				<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+         			</div>
+         			<div class="menu-item-description col-sm-7">
+         				<h3 class="menu-item-title">Veag with Mixed Vegetables.</h3>
+         				<p class="menu-item-details">I have to describe the food here.</p>
+         			</div>
+         		</div>
+         		<hr class="visible-xs">
+         	</div>
 
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="single-category.html">
-					<div id="specials-tile"><span>GALLERY</span></div>
-				</a>
-			</div>	
+         	 <div class="clearfix visible-md-block visible-lg-block "></div><!--copy it after odd counts to avoid long description problems-->
 
-			<div class="col-md-4 col-sm-12 col-xs-12">
-				<a href="https://goo.gl/maps/qB8Q8ArFcee4AEKU6" target="_blank">
-					<div id="map-tile"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233713.5366334781!2d90.34584452483024!3d23.75543695508446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2z4Kai4Ka-4KaV4Ka-!5e0!3m2!1sbn!2sbd!4v1637127782658!5m2!1sbn!2sbd" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe><span>map</span></div>
-				</a>
-			</div>
 
-		</div><!-- End of #home-tiles  -->
 
-		<!-- /////// -->
+
+         		<div class="menu-item-tile col-md-6">
+         		<div class="row">
+         			<div class="col-sm-5">
+         				<div class="menu-item-photo">
+         					<div>G03</div>
+         					<img src="images/jersy.jpg" class="img-responsive" height="150" width="250" alt="Item">
+         				</div>
+         				<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+         			</div>
+         			<div class="menu-item-description col-sm-7">
+         				<h3 class="menu-item-title">Veag with Mixed Vegetables.</h3>
+         				<p class="menu-item-details">I have describe the food here.</p>
+         			</div>
+         		</div>
+         		<hr class="visible-xs">
+         	</div>
+
+
+         	<div class="menu-item-tile col-md-6">
+         		<div class="row">
+         			<div class="col-sm-5">
+         				<div class="menu-item-photo">
+         					<div>G04</div>
+         					<img src="images/23mar16.jpg" class="img-responsive" height="150" width="250" alt="Item">
+         				</div>
+         				<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+         			</div>
+         			<div class="menu-item-description col-sm-7">
+         				<h3 class="menu-item-title">Veag with Mixed Vegetables.</h3>
+         				<p class="menu-item-details">I have to describe the food here.</p>
+         			</div>
+         		</div>
+         		<hr class="visible-xs">
+         	</div>
+
+         	<div class="clearfix visible-md-block visible-lg-block "></div>
+
+         </section>
 
 	</div><!-- End of #main-content -->
 
@@ -154,6 +208,7 @@
 
      	</div>
      </footer>
+    	
 
 
      <!-- jQuery -->
@@ -162,6 +217,3 @@
 	<script src="js/script.js"></script>
 </body>
 </html>
-
-
-
