--- a/fc/single-category.html
+++ b/fc/single-category.html
@@ -97,11 +97,11 @@
          					<div>G01</div>
          					<img src="images/best.jpg" class="img-responsive" height="150" width="250" alt="Item">
          				</div>
-         				<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+         				<div class="menu-item-price"><span></span><span></span></div>
          			</div>
          			<div class="menu-item-description col-sm-7">
-         				<h3 class="menu-item-title">Veag with Mixed Vegetables.</h3>
-         				<p class="menu-item-details">I have describe the food here.</p>
+         				<h3 class="menu-item-title">Whole Team</h3>
+         				<p class="menu-item-details">Front view</p>
          			</div>
          		</div>
          		<hr class="visible-xs">
@@ -115,11 +115,11 @@
          					<div>G02</div>
          					<img src="images/circle.jpg" class="img-responsive" height="150" width="250" alt="Item">
          				</div>
-         				<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+         				<div class="menu-item-price"><span></span><span></span></div>
          			</div>
          			<div class="menu-item-description col-sm-7">
-         				<h3 class="menu-item-title">Veag with Mixed Vegetables.</h3>
-         				<p class="menu-item-details">I have to describe the food here.</p>
+         				<h3 class="menu-item-title">Anonymous Circle</h3>
+         				<p class="menu-item-details">Can you recognize everyone individually ? </p>
          			</div>
          		</div>
          		<hr class="visible-xs">
@@ -137,11 +137,11 @@
          					<div>G03</div>
          					<img src="images/jersy.jpg" class="img-responsive" height="150" width="250" alt="Item">
          				</div>
-         				<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+         				<div class="menu-item-price"><span></span><span></span></div>
          			</div>
          			<div class="menu-item-description col-sm-7">
-         				<h3 class="menu-item-title">Veag with Mixed Vegetables.</h3>
-         				<p class="menu-item-details">I have describe the food here.</p>
+         				<h3 class="menu-item-title">Jersey</h3>
+         				<p class="menu-item-details">Ahh ! Well designed !</p>
          			</div>
          		</div>
          		<hr class="visible-xs">
@@ -155,11 +155,11 @@
          					<div>G04</div>
          					<img src="images/23mar16.jpg" class="img-responsive" height="150" width="250" alt="Item">
          				</div>
-         				<div class="menu-item-price">$10.95<span>(pint)</span>$14.95<span>(quart)</span></div>
+         				<div class="menu-item-price"><span></span><span></span></div>
          			</div>
          			<div class="menu-item-description col-sm-7">
-         				<h3 class="menu-item-title">Veag with Mixed Vegetables.</h3>
-         				<p class="menu-item-details">I have to describe the food here.</p>
+         				<h3 class="menu-item-title">In Action!</h3>
+         				<p class="menu-item-details">No time to type !....</p>
          			</div>
          		</div>
          		<hr class="visible-xs">
