--- a/fc/index.html
+++ b/fc/index.html
@@ -1,4 +1,10 @@
 
+
+/*
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -65,9 +71,9 @@
 	       		</li>
 	       		<li id="phone" class="hidden-xs">
 	       			<a href="">
-	       				<span>+880***</span>
+	       				<span>+880-XXX-XXX</span>
 	       			</a>
-	       			<div> * updating soon </div>
+	       			<div> *Phone no. updating soon</div>
 	       		</li>
 	       	</ul><!-- #nav-list  -->
 		
@@ -80,10 +86,10 @@
 
 	<div id="call-btn" class="visible-xs">
 	<a class="btn" href="">
-		<span class="glyphicon glyphicon-earphone"></span>+880***
+		<span class="glyphicon glyphicon-earphone"></span>+880-XXX-XXX
 	</a>
 	</div>
-	<div id="xs-deliver" class="text-center visible-xs">* updating soon </div>
+	<div id="xs-deliver" class="text-center visible-xs">*Phone no. updating soon </div>
 
 	<div id="main-content" class="container">
 		<div class="jumbotron">
@@ -162,52 +168,6 @@
 	<script src="js/script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
