--- a/fc/others.html
+++ b/fc/others.html
@@ -64,9 +64,9 @@
 	       		</li>
 	       		<li id="phone" class="hidden-xs">
 	       			<a href="">
-	       				<span>+880***</span>
+	       				<span>+880-XXX-XXX</span>
 	       			</a>
-	       			<div>* updating soon.</div>
+	       			<div>*Phone no. updating soon</div>
 	       		</li>
 	       	</ul><!-- #nav-list  -->
 		
@@ -79,10 +79,10 @@
 
 	<div id="call-btn" class="visible-xs">
 	<a class="btn" href="">
-		<span class="glyphicon glyphicon-earphone"></span>+880***
+		<span class="glyphicon glyphicon-earphone"></span>+880-XXX-XXX
 	</a>
 	</div>
-	<div id="xs-deliver" class="text-center visible-xs">* updating soon </div>
+	<div id="xs-deliver" class="text-center visible-xs">*Phone no. updating soon</div>
 
 	<div id="main-content" class="container">
 		<h2 id="menu-categories-title"
