--- a/fc/players.html
+++ b/fc/players.html
@@ -99,7 +99,7 @@
          					<div>P01</div>
          					<img src="images/player.png" class="img-responsive" height="150" width="250" alt="Item">
          				</div>
-         				<div class="menu-item-price">Position:Mid><br><br><br><span></span><span></span></div>
+         				<div class="menu-item-price">Position:Mid<br><br><br><span></span><span></span></div>
          			</div>
          			<div class="menu-item-description col-sm-7">
          				<h3 class="menu-item-title">Kazi Mustafizur Rahman Abeer</h3>
@@ -145,7 +145,7 @@
          			</div>
          			<div class="menu-item-description col-sm-7">
          				<h3 class="menu-item-title">Twasin Rahman</h3>
-         				<p class="menu-item-details">Shirt number 5</p>
+         				<p class="menu-item-details">Shirt number 7</p>
          			</div>
          		</div>
          		<hr class="visible-xs">
