--- a/fc/single-category.html
+++ b/fc/single-category.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a href="index.html" class="pull-left visible-md visible-lg">
-					<div id="logo-img" alt="Logo image"></div>
+					<div id="logo-img"></div>
 			    </a>
 			    <div class="navbar-brand">
 			    	<a href="index.html">
@@ -40,7 +40,7 @@
         <span class="icon-bar"></span>
         </button>
 	</div>
-	       <div id="collapsable-nav" class="collapse-navbar-collapse">
+	       <div id="collapsable-nav" class="collapse navbar-collapse">
 	       	<ul id="nav-list" class="nav navbar-nav navbar-right">
 	       		<li class="visible-xs">
 	       			<a href="index.html">
@@ -165,7 +165,7 @@
          		<hr class="visible-xs">
          	</div>
 
-         	<div class="clearfix visible-md-block visible-lg-block "></div>
+         	<div class="clearfix visible-md-block visible-lg-block "></div><!--copy it after odd counts to avoid long description problems-->
 
          </section>
 
