--- a/fc/Award.html
+++ b/fc/Award.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,18 +22,18 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a href="index.html" class="pull-left visible-md visible-lg">
-					<div id="logo-img" alt="Logo image"></div>
+					<div id="logo-img"></div>
 			    </a>
 			    <div class="navbar-brand">
 			    	<a href="index.html">
 			    		<h1>FC ANONYMOUS</h1>
 			    	</a>
-			    	<p>	<img src="images/fourstar.png" alt="logo">
-			    		<span>We Are Anonymous </span>
+			    	<p>	<img src="images/fourstar.png" alt="We Are Anonymous">
+			    		<span>We Are Anonymous</span>
 			    	</p>
 			    </div>
 
-	   <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+	   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -43,7 +42,7 @@
 	</div>
 	       <div id="collapsable-nav" class="collapse navbar-collapse">
 	       	<ul id="nav-list" class="nav navbar-nav navbar-right">
-	       		<li class="visible-xs active">
+	       		<li class="visible-xs">
 	       			<a href="index.html">
 	       				<span class="glyphicon glyphicon-home">Home</span>
 	       			</a>
@@ -58,7 +57,7 @@
 	       				<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About
 	       				</a>
 	       		</li>
-	       		<li>
+	       		<li class="active">
 	       			<a href="Award.html">
 	       				<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Awards
 	       				</a>
@@ -67,7 +66,7 @@
 	       			<a href="">
 	       				<span>+880-XXX-XXX</span>
 	       			</a>
-	       			<div> *Phone no. updating soon</div>
+	       			<div>*Phone no. updating soon </div>
 	       		</li>
 	       	</ul><!-- #nav-list  -->
 		
@@ -86,34 +85,29 @@
 	<div id="xs-deliver" class="text-center visible-xs">*Phone no. updating soon </div>
 
 	<div id="main-content" class="container">
-		<div class="jumbotron">
-			<img src="images/jumbotron.jpg" alt="Pic of us" class="img-responsive visible-xs">
-		</div>
-		<!-- /////// -->
+		<h2 id="menu-categories-title" class="text-center">Awards</h2>
+		<div class="text-center"></div>
 
 
-		<div id="home-tiles" class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="menu-categories.html">
-					<div id="menu-tile"><span>menu</span></div>
-				</a>
-			</div>
+		<div class="myclass" class="col-md-12 col-sm-12 col-xs-12">
+                <a>
+                    <div id="added-tile">
+                        <h2 align="center"></h2>
+                        <p>
+                        	<ul>
+                        	<li><h3 style="font-style: italic">
+                        	AIUB IEEE Engineering Jubilation Football Tournament 2018 - " Champion " </h3>
+                            </li>
+                        	<li><h3 style="font-style: italic">
+                        	DRMC Futsal Fiesta-2016 , organised by HSC’19 - " Runners Up "</h3>
+                            </li>
+                            </ul>
+                        </p>
+                    </div>
+                </a>
+        </div>
 
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="single-category.html">
-					<div id="specials-tile"><span>GALLERY</span></div>
-				</a>
-			</div>	
 
-			<div class="col-md-4 col-sm-12 col-xs-12">
-				<a href="https://goo.gl/maps/qB8Q8ArFcee4AEKU6" target="_blank">
-					<div id="map-tile"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233713.5366334781!2d90.34584452483024!3d23.75543695508446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2z4Kai4Ka-4KaV4Ka-!5e0!3m2!1sbn!2sbd!4v1637127782658!5m2!1sbn!2sbd" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe><span>map</span></div>
-				</a>
-			</div>
-
-		</div><!-- End of #home-tiles  -->
-
-		<!-- /////// -->
 
 	</div><!-- End of #main-content -->
 
@@ -133,7 +127,6 @@
                     
      		 		 <hr class="visible-xs">
      		 	</section>
-
      		 	<section id="address" class="col-sm-4">
      		 		<span>Address:</span><br>
      		 		 Dhaka,Bangladesh<br><br>
@@ -141,6 +134,7 @@
      		 		 <p>We Are Remians HSC-19</p>
      		 		 <hr class="visible-xs">
      		 	</section>
+
 
      		 	<section id="testimonials" class="col-sm-4">
      		 		 <p>"Website is under construction."</p>
@@ -154,6 +148,7 @@
 
      	</div>
      </footer>
+    	
 
 
      <!-- jQuery -->
@@ -162,5 +157,8 @@
 	<script src="js/script.js"></script>
 </body>
 </html>
+
+
+
 
 
