--- a/fc/menu-categories.html
+++ b/fc/menu-categories.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a href="index.html" class="pull-left visible-md visible-lg">
-					<div id="logo-img" alt="Logo image"></div>
+					<div id="logo-img"></div>
 			    </a>
 			    <div class="navbar-brand">
 			    	<a href="index.html">
@@ -40,7 +40,7 @@
         <span class="icon-bar"></span>
         </button>
 	</div>
-	       <div id="collapsable-nav" class="collapse-navbar-collapse">
+	       <div id="collapsable-nav" class="collapse navbar-collapse">
 	       	<ul id="nav-list" class="nav navbar-nav navbar-right">
 	       		<li class="visible-xs">
 	       			<a href="index.html">
@@ -53,12 +53,12 @@
 	       				</a>
 	       		</li>
 	       		<li>
-	       			<a href="#">
+	       			<a href="info.html">
 	       				<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About
 	       				</a>
 	       		</li>
 	       		<li>
-	       			<a href="#">
+	       			<a href="Award.html">
 	       				<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Awards
 	       				</a>
 	       		</li>
