--- a/fc/players.html
+++ b/fc/players.html
@@ -22,7 +22,7 @@
 		<div class="container">
 			<div class="navbar-header">
 				<a href="index.html" class="pull-left visible-md visible-lg">
-					<div id="logo-img" alt="Logo image"></div>
+					<div id="logo-img"></div>
 			    </a>
 			    <div class="navbar-brand">
 			    	<a href="index.html">
@@ -40,7 +40,7 @@
         <span class="icon-bar"></span>
         </button>
 	</div>
-	       <div id="collapsable-nav" class="collapse-navbar-collapse">
+	       <div id="collapsable-nav" class="collapse navbar-collapse">
 	       	<ul id="nav-list" class="nav navbar-nav navbar-right">
 	       		<li class="visible-xs">
 	       			<a href="index.html">
@@ -53,12 +53,12 @@
 	       				</a>
 	       		</li>
 	       		<li>
-	       			<a href="#">
+	       			<a href="info.html">
 	       				<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About
 	       				</a>
 	       		</li>
 	       		<li>
-	       			<a href="#">
+	       			<a href="Awards.html">
 	       				<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Awards
 	       				</a>
 	       		</li>
@@ -390,7 +390,7 @@
                     </div>
                     <div class="menu-item-description col-sm-7">
                         <h3 class="menu-item-title">Ishtiak Ferdous Shuddho</h3>
-                        <p class="menu-item-details">Shirt number !? </p>
+                        <p class="menu-item-details"> </p>
                     </div>
                 </div>
                 <hr class="visible-xs">
@@ -404,6 +404,45 @@
                             <div>P16</div>
                             <img src="images/player.png" class="img-responsive" height="150" width="250" alt="Item">
                         </div>
+                        <div class="menu-item-price">Position:Forward<br><br><br><span></span><span></span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Abu Zihad Dip</h3>
+                        <p class="menu-item-details">Shirt number 17</p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+             <div class="clearfix visible-md-block visible-lg-block "></div><!--copy it after odd counts to avoid long description problems-->
+
+
+
+             <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>P17</div>
+                            <img src="images/player.png" class="img-responsive" height="150" width="250" alt="Item">
+                        </div>
+                        <div class="menu-item-price">Position:Forward<br><br><br><span></span><span></span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Rayat Sayeb</h3>
+                        <p class="menu-item-details"> Shirt number 9 </p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>P18</div>
+                            <img src="images/player.png" class="img-responsive" height="150" width="250" alt="Item">
+                        </div>
                         <div class="menu-item-price">Position:...<br><br><br><span></span><span></span></div>
                     </div>
                     <div class="menu-item-description col-sm-7">
@@ -415,6 +454,9 @@
             </div>
 
              <div class="clearfix visible-md-block visible-lg-block "></div><!--copy it after odd counts to avoid long description problems-->
+
+
+
 
 
 
