--- a/fc/Award.html
+++ b/fc/Award.html
@@ -96,10 +96,10 @@
                         <p>
                         	<ul>
                         	<li><h3 style="font-style: italic">
-                        	AIUB IEEE Engineering Jubilation Football Tournament 2018 - " Champion " </h3>
+                        	AIUB IEEE Engineering Jubilation Football Tournament 2018 - Champion </h3>
                             </li>
                         	<li><h3 style="font-style: italic">
-                        	DRMC Futsal Fiesta-2016 , organised by HSC’19 - " Runners Up "</h3>
+                        	DRMC Futsal Fiesta-2016 , organised by HSC’19 - Runners Up</h3>
                             </li>
                             </ul>
                         </p>
