--- a/fc/single-category.html
+++ b/fc/single-category.html
@@ -53,12 +53,12 @@
 	       				</a>
 	       		</li>
 	       		<li>
-	       			<a href="#">
+	       			<a href="info.html">
 	       				<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About
 	       				</a>
 	       		</li>
 	       		<li>
-	       			<a href="#">
+	       			<a href="Award.html">
 	       				<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Awards
 	       				</a>
 	       		</li>
