--- a/fc/others.html
+++ b/fc/others.html
@@ -52,6 +52,16 @@
 	       				<span class="glyphicon glyphicon-th-large"></span><br class="hidden-xs">Menu
 	       				</a>
 	       		</li>
+	       		<li>
+	       			<a href="info.html">
+	       				<span class="glyphicon glyphicon-info-sign"></span><br class="hidden-xs">About
+	       				</a>
+	       		</li>
+	       		<li>
+	       			<a href="Award.html">
+	       				<span class="glyphicon glyphicon-certificate"></span><br class="hidden-xs">Awards
+	       				</a>
+	       		</li>
 	       		
 	       		<li id="phone" class="hidden-xs">
 	       			<a href="">
