--- a/fc/single-category.html
+++ b/fc/single-category.html
@@ -91,6 +91,7 @@
 		<div class="text-center">"Here lives our memories."</div>
 
          <section class="row">
+
          	<div class="menu-item-tile col-md-6">
          		<div class="row">
          			<div class="col-sm-5">
@@ -129,24 +130,24 @@
          	 <div class="clearfix visible-md-block visible-lg-block "></div><!--copy it after odd counts to avoid long description problems-->
 
 
+        <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>G03</div>
+                            <img src="images/tournament.jpg" class="img-responsive" height="150" width="250" alt="Item">
+                        </div>
+                        <div class="menu-item-price"><span></span><span></span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Tournament</h3>
+                        <p class="menu-item-details">Front view</p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
 
-
-         		<div class="menu-item-tile col-md-6">
-         		<div class="row">
-         			<div class="col-sm-5">
-         				<div class="menu-item-photo">
-         					<div>G03</div>
-         					<img src="images/jersy.jpg" class="img-responsive" height="150" width="250" alt="Item">
-         				</div>
-         				<div class="menu-item-price"><span></span><span></span></div>
-         			</div>
-         			<div class="menu-item-description col-sm-7">
-         				<h3 class="menu-item-title">Jersey</h3>
-         				<p class="menu-item-details">Ahh ! Well designed !</p>
-         			</div>
-         		</div>
-         		<hr class="visible-xs">
-         	</div>
+      
 
 
          	<div class="menu-item-tile col-md-6">
@@ -167,6 +168,48 @@
          	</div>
 
          	<div class="clearfix visible-md-block visible-lg-block "></div><!--copy it after odd counts to avoid long description problems-->
+
+
+            <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>G05</div>
+                            <img src="images/19-Nov-21.jpg" class="img-responsive" height="150" width="250" alt="Item">
+                        </div>
+                        <div class="menu-item-price"><span></span><span></span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Friday Mornings</h3>
+                        <p class="menu-item-details">Sunshine</p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+            </div>
+
+
+
+        <div class="menu-item-tile col-md-6">
+                <div class="row">
+                    <div class="col-sm-5">
+                        <div class="menu-item-photo">
+                            <div>G06</div>
+                            <img src="images/jersy.jpg" class="img-responsive" height="150" width="250" alt="Item">
+                        </div>
+                        <div class="menu-item-price"><span></span><span></span></div>
+                    </div>
+                    <div class="menu-item-description col-sm-7">
+                        <h3 class="menu-item-title">Jersey</h3>
+                        <p class="menu-item-details">Ahh ! Well designed !</p>
+                    </div>
+                </div>
+                <hr class="visible-xs">
+         </div>
+
+
+          
+
+            <div class="clearfix visible-md-block visible-lg-block "></div><!--copy it after odd counts to avoid long description problems-->
 
          </section>
 
